feat: add services

--- a/package.json
+++ b/package.json
@@ -3,20 +3,20 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "directories": {
     "doc": "docs"
   },
   "scripts": {
-    "start:dev": "tsx src/server.ts",
-    "start:watch": "tsx watch src/server.ts",
+    "start:dev": "tsx --env-file=.env src/server.ts",
+    "start:watch": "tsx watch --env-file=.env src/server.ts",
     "dist": "tsup src",
-    "start": "npm run dist && node dist/server.js"
+    "start": "npm run dist && node --env-file=.env dist/server.js"
   },
   "keywords": [],
   "author": "Valdir Alves",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^20.12.12",
     "tsup": "^8.0.2",
     "tsx": "^4.11.0",
     "typescript": "^5.4.5"
